styles/_snippets/_navigation.scss
#branding
{
	z-index: 2000;
  	height: 150px;
  	position: relative;
	border-bottom: 6px solid $border-color;
	background-color: $white;

	.logo {
		margin: 10px;
		display: block;
		height: 130px;
	}

	.mini-logo {
		position: absolute;
		margin: 9px;
	}
	
	.site-nav {
	  	-webkit-transition: all 0.1s ease-out;  
	  	-moz-transition: all 0.1s ease-out;  
	  	-ms-transition: all 0.1s ease-out;  
	  	-o-transition: all 0.1s ease-out;  
	  	transition: all 0.1s ease-out;
	  			
	    ul {
	      	position: absolute;
	      	z-index: 2;
	      	background: $white;
	      	display: inline-block;
	      	width: 100%;
			height: inherit;
	    }
	    
		li { 
			display: inline-block; 
		
	        float: left;        
		
		    a {
		   		display: inline-block;
		   	    color: $nav-link-color;
		   	    text-decoration: none;
		   	    text-transform: uppercase;
		   	    padding: 0 25px;
   	          	line-height: 3;
				font-size: 1.125em;
   	          	background: $white;

   	          	-webkit-transition: padding 0.1s linear;  
   	          	-moz-transition: padding 0.1s linear;  
   	          	-ms-transition: padding 0.1s linear;  
   	          	-o-transition: padding 0.1s linear;  
   	          	transition: padding 0.1s linear;

	            &:hover
	            {
	                text-decoration: none;
	                background-color: $white;
	                color: #FFF;
	            }

   	        }
			
		}
      

	        li:last-child a { padding-right: 0; }
	        li a.active { color: $emerald; }
	        li a:hover { color: $orchid; }
		
	}
	
	#navigation {
		width: 100%;
	  	background: $white;
	  	text-align: center;
	  	position: absolute;
	  	bottom: 0;
		top: auto;
	  	-webkit-transition: all 0.1s ease-out;  
	  	-moz-transition: all 0.1s ease-out;  
	  	-ms-transition: all 0.1s ease-out;  
	  	-o-transition: all 0.1s ease-out;  
	  	transition: all 0.1s ease-out;
	  
	  	.inner {
	  		height: 54px;
			max-width: 960px;
			margin: 0 auto;
	  	}
		
	  	&.fixed {
	      	position: fixed;
	      	top: 0;
	      	bottom: auto;
	      	border-width: 0 0 3px;
			
			ul { 
				float: right;
				background: transparent; 
				width: auto;
			}
			
			li a { padding: 0 15px; }
	  	}

	  	#logo-mini {
    		left: 0;
    		top: 50%;
    		z-index: 1;
  	  	}
		

	}
}

.site-header
{
    z-index: 1000;
    width: 100%;
    text-align: center;
    position: relative;
    color: $white;
    margin-bottom: 25px;
    padding-top: 60px;
    
    h1
    {
        font-size: 4em;
        font-weight: normal;
        margin-bottom: 0;
        margin-top: 0px;  
		color: $emerald;
    }

    h2
    {
        font-weight: normal;
        font-size: 1.4em;
        margin: 5px 0 0;
		color: rgba( $emerald, 0.6);
    }
    h3
    {
        font-weight: normal;
        margin: 0;
    }
    h4
    {
        font-weight: normal;
    }

    a
    {
      text-decoration: none;
      color: inherit;
    }
}

.front #branding {
	border-bottom: 0;
}

